tests/machine/x/hs/len_map.hs
-- Generated by Mochi compiler v0.10.26 on 2025-07-16T15:36:30Z
-- Code generated by Mochi compiler; DO NOT EDIT.
{-# LANGUAGE DeriveGeneric #-}

module Main where

import qualified Data.Map as Map

main :: IO ()
main = do
  print (length Map.fromList [("a", (1 :: Int)), ("b", (2 :: Int))])
